framework/tests/framework/MissingSymbolCrash.java
// warning: Javac errored; type checking halted.
public class MissingSymbolCrash {
    public void test() {
        // :: error: cannot find symbol
        lst.add(s);
    }
}
